# circuits-mat

./: cabal.project  circuits-mat.cabal
spike/: README.md
src/Circuit/: Mat.hs  MatH.hs
src/Circuit/Mat/: Dense.hs  Harpie.hs
