cabal-version: 3.0
name: circuits-mat
version: 0.1.0.0
license: BSD-3-Clause
author: Tony Day
maintainer: tonyday567@gmail.com
category: math
synopsis: Matrices over a semiring as a traced monoidal category.
description:
  Matrices indexed by finite types, with the Either tensor as biproduct.
  The trace computes the Schur-complement star formula, giving transitive
  closure, shortest paths, and regular expressions by choice of semiring.

build-type: Simple

source-repository head
  type: git
  location: https://github.com/tonyday567/circuits-mat

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wno-unused-imports
    -Wno-unused-top-binds

library
  import: ghc-options-stanza
  default-language: GHC2024
  hs-source-dirs: src
  exposed-modules:
    Circuit.Mat,
    Circuit.Mat.Dense,
    Circuit.Mat.Harpie,
  build-depends:
    base >=4.18 && <5,
    circuits >=0.2 && <0.3,
    harpie >=0.3 && <0.4,
    numhask >=0.13 && <0.15,
    vector >=0.12 && <0.14,

  default-extensions: RebindableSyntax